# software-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: camera.cpp  camera.hpp  light.cpp  light.hpp  model.cpp  model.hpp  payload.cpp  payload.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp  utils.hpp  vertex.hpp
src/gui/: window.cpp  window.hpp
src/loader/: loader.hpp  obj_loader.cpp  obj_loader.hpp
src/shader/: blinn_phong_fragment_shader.cpp  blinn_phong_fragment_shader.hpp  normal_fragment_shader.cpp  normal_fragment_shader.hpp  shadow_shader.cpp  shadow_shader.hpp  vertex_shader.cpp  vertex_shader.hpp
